Fixing final issues in fontend/backend rendering, map and boxes now visibe

--- a/geomap-ui/src/index.css
+++ b/geomap-ui/src/index.css
@@ -22,6 +22,11 @@ a:hover {
   color: #535bf2;
 }
 
+html, body, #root {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
   display: flex;
